app/src/main/java/com/example/desafio/domain/commons/errors/GenericUseCaseError.kt
package com.example.desafio.domain.commons.errors

class GenericUseCaseError(e: Throwable) : Throwable() {

}
